# sto2rnass

./: .gitignore  README.md  pyproject.toml
sto2rnass/: cli.py
